# HoverGames_Challenge3

./: LICENSE  README.md
01_EMI_analysis/: EMI_finalProc.m
02_offboard_control/cercV_offboard/: package.xml  setup.cfg  setup.py
02_offboard_control/cercV_offboard/cercV_offboard/: main_hovergames_cerc.py
02_offboard_control/patrat_offboard/: package.xml  setup.cfg  setup.py
02_offboard_control/patrat_offboard/patrat_offboard/: main_hovergames_patrat.py
Video/: server_ZMQ.py
agri_hovergames/: package.xml  setup.cfg  setup.py
agri_hovergames/agri_hovergames/: flightControl.py  healthPlant.py  videoPub.py  videoWiFibroadcast.py
agri_hovergames/agri_hovergames/submodules/: VideoDevices.py
agri_hovergames/launch/: python_parameters_launch.py
